<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:id="@+id/displayItem">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_img" />

    <TextView
        android:id="@+id/nama_txt"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/Makanan"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/montserratsemibold"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:text="@string/Exp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/nama_txt"
        android:fontFamily="@font/montserratsemibold"/>

    <TextView
        android:id="@+id/expDate"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:text="@string/Expdate"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/nama_txt"
        android:fontFamily="@font/montserratsemibold"/>

    <ImageButton
        android:id="@+id/displayLayout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/miku"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/expDate"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        app:tint="@color/white" />

    <!--    <ImageButton-->
    <!--        android:id="@+id/remove"-->
    <!--        android:layout_width="50dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginTop="30dp"-->
    <!--        android:backgroundTint="#ED2222"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/displayLayout"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:srcCompat="@drawable/ic_baseline_remove_24"-->
    <!--        app:tint="@color/white" />-->

</androidx.constraintlayout.widget.ConstraintLayout>