<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_frame_4"
    tools:context=".fragments.add.AddFreezerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="581dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_img"
                    android:tag="default"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.058" />

                <TextView
                    android:id="@+id/Title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="12"
                    android:fontFamily="@font/montserratsemibold"

                    android:text="@string/Nama"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img"
                    app:layout_constraintVertical_bias="0.026" />

                <EditText
                    android:id="@+id/Nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="14"
                    android:fontFamily="@font/montserratsemibold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Title1"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/Title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="12"
                    android:fontFamily="@font/montserratsemibold"

                    android:text="@string/Tanggal"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Nama"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageButton
                    android:id="@+id/Tanggal"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Title2"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/confirm_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/miku"

                    android:fontFamily="@font/montserratsemibold"
                    android:text="@string/confirm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Tanggal" />

                <Button
                    android:id="@+id/img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/miku"
                    android:fontFamily="@font/montserratsemibold"

                    android:text="@string/foto"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/dateTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Tanggal"

                    android:background="@null"
                    android:clickable="false"
                    android:editable="false"
                    android:fontFamily="@font/montserratsemibold"
                    android:hint="@string/dd_mm_yyyy"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/Tanggal"
                    app:layout_constraintEnd_toEndOf="@+id/Tanggal"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/Tanggal"
                    app:layout_constraintTop_toTopOf="@+id/Tanggal"
                    app:layout_constraintVertical_bias="0.478" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>