<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_frame_4"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Update.UpdatePendinginBawahFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="535dp">


                <TextView
                    android:id="@+id/dateTv_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/montserratsemibold"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/Tanggal_update"
                    app:layout_constraintEnd_toEndOf="@+id/Tanggal_update"
                    app:layout_constraintHorizontal_bias="0.013"
                    app:layout_constraintStart_toStartOf="@+id/Tanggal_update"
                    app:layout_constraintTop_toTopOf="@+id/Tanggal_update" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_img"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.08" />

                <EditText
                    android:id="@+id/Nama_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="14"
                    android:fontFamily="@font/montserratsemibold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Title1"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/Title2"
                    android:layout_width="304dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="12dp"
                    android:ems="12"
                    android:fontFamily="@font/montserratsemibold"

                    android:text="@string/Tanggal"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Nama_update"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageButton
                    android:id="@+id/Tanggal_update"
                    android:layout_width="307dp"
                    android:layout_height="49dp"
                    android:layout_marginTop="12dp"
                    android:background="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.509"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Title2"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/Title1"
                    android:layout_width="299dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="12dp"
                    android:ems="12"
                    android:fontFamily="@font/montserratsemibold"

                    android:text="@string/Nama"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.508"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.03" />

                <Button
                    android:id="@+id/confirm_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/miku"
                    android:fontFamily="@font/montserratsemibold"
                    android:text="@string/update"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Tanggal_update" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>